--- a/musicShapes1.0/src/App.css
+++ b/musicShapes1.0/src/App.css
@@ -78,7 +78,7 @@ height: 800px !important;
 
 .screen {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   height: 100vh;
   width: 100vw;
   justify-items: center !important;
@@ -96,4 +96,12 @@ height: 800px !important;
 }
 .board {
   background-color: red;
+}
+.gameHeader {
+  margin-left: 20px;
+
+  border: 5px rgb(255, 0, 0) solid;
+  max-height: 300px;
+  border-radius: 20px;
+  min-width: 20vw;
 }
