--- a/musicShapes1.0/src/App.css
+++ b/musicShapes1.0/src/App.css
@@ -5,59 +5,28 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
-
   display: flex;
   width: 80vw;
-  height:80vh;
+  height: 80vh;
   justify-content: center;
   flex-wrap: wrap;
   margin-right: auto;
   margin-left: auto;
-  
 }
 
 .read-the-docs {
   color: #888;
 }
 button {
- margin: 10px;
- padding: 0px;
-
+  margin: 10px;
+    padding: 0px;
 }
 
 .gameButton {
-  display: flex; 
+  display: flex;
   justify-content: center;
-align-items:center;
+  align-items: center;
 }
 
 .gameContainer {
@@ -66,19 +35,17 @@ align-items:center;
   border: 10px solid rgb(232, 32, 32);
   border-radius: 20px;
   width: 800px !important;
-height: 800px !important;
+  height: 800px !important;
   overflow: scroll;
   justify-content: space-evenly;
   margin-left: auto;
   margin-right: auto;
-  
-  
-  
 }
 
 .screen {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   height: 100vh;
   width: 100vw;
   justify-items: center !important;
@@ -87,12 +54,11 @@ height: 800px !important;
   font-size: 60px;
 }
 .matchButton {
- margin-right: auto;
- margin-left: auto;
- width: 100px !important;
- height: 100px !important;
- font-size: 40px;
-;
+  margin-right: auto;
+    margin-left: auto;
+    width: 100px !important;
+    height: 100px !important;
+    font-size: 40px;
 }
 .board {
   background-color: red;
@@ -101,7 +67,10 @@ height: 800px !important;
   margin-left: 20px;
 
   border: 5px rgb(255, 0, 0) solid;
-  max-height: 300px;
+  margin-bottom: 10px;
   border-radius: 20px;
-  min-width: 20vw;
+  margin-right: 10px;
+    height: 400px;
+    min-width: 25vw;
+    padding: 10px;
 }
