--- a/musicShapes1.0/src/App.css
+++ b/musicShapes1.0/src/App.css
@@ -89,6 +89,8 @@ button {
   width: 50vw;
   height: 50%;
   z-index: 100;
-  background-color: rgba(102, 29, 29, 0.5);
+  background-color: rgba(102, 29, 29, 0.895);
+    border: 5px rgb(255, 0, 0) solid;
+    border-radius: 20px;
 
 }
