--- a/musicShapes1.0/src/App.css
+++ b/musicShapes1.0/src/App.css
@@ -27,6 +27,9 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    transition: all .2s;
 }
 
 .gameContainer {
